<resources>
    <string name="app_name">Biotic</string>
    <string name="biotic">Biotic</string>
    <string name="classes">Classes</string>
    <string name="welcome">Welcome Back!  </string>
    <string name="signIn">sign in to countinue  </string>
    <string name="mobile">Mobile Number  </string>
    <string name="forget">Forgot your passwoed</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="password">Password</string>
    <string name="number">Mobile</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="Rs">\u20B9</string>
    <string name="title_activity_vedio_lacture">VedioLactureActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_home">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="zoomkey">qfjDOqjbDJF3dXsgHUcTJKP5w7Ppzxa0fujh</string>
    <string name="zoomsecet">HXuhFwGPLM7JK4F0EbyCXHI1YDfqnZyl4cah</string>
</resources>